--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firesync",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,5 +11,8 @@
   "devDependencies": {
     "elasticsearch": "^2.4.3",
     "firebase": "^2.0.6"
+  },
+  "dependencies": {
+    "debug": "^2.1.0"
   }
 }
