--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "firesync",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "firebase elasticsearch sync stream",
   "main": "index.js",
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "elasticsearch": "3.1.1",
-    "firebase": "2.1.1"
+    "firebase": "2.1.1",
+    "through2": "^0.6.3"
   },
   "dependencies": {
     "debug": "2.1.1"
