--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "elasticsearch": "3.1.1",
-    "firebase": "2.1.1",
-    "through2": "^0.6.3"
+    "elasticsearch": "3.1.3",
+    "firenext": "3.0.2",
+    "jshint-stylish": "^1.0.1",
+    "through2": "0.6.3"
   },
   "dependencies": {
-    "debug": "2.1.1"
+    "debug": "2.1.2"
   }
 }
