--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "firesync",
+   "repository": {
+      "type": "git",
+      "url": "https://github.com/jogabo/firesync.git"
+  },
   "version": "1.0.3",
   "description": "firebase elasticsearch sync stream",
   "main": "index.js",
@@ -7,8 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "elasticsearch": "3.1.3",
-    "firenext": "3.0.3",
-    "jshint-stylish": "^1.0.1",
+    "firenext": "3.1.0",
+    "jshint-stylish": "1.0.1",
     "through2": "0.6.3"
   },
   "dependencies": {
